tests/out/error/match/not_exhaustive.out
tests/out/error/match/not_exhaustive.in.bt:12:0 error: match must be exhaustive (add `else {}` or branches for red, green)
tests/out/error/match/not_exhaustive.in.bt:17:0 error: match must be exhaustive (add `else {}` or branches for Venus)
